--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "tsyringe": "^4.7.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/http-errors": "^2.0.1",
     "@types/jest": "^29.4.0",
     "@types/lodash-es": "^4.17.6",
@@ -55,6 +56,8 @@
     "husky": "^8.0.3",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "jest-serializer-html": "^7.1.0",
+    "jest-styled-components": "^7.1.1",
     "next-router-mock": "^0.9.2",
     "prettier": "^2.8.4",
     "typescript": "4.9.5"
